# nova

./: .gitignore  .pre-commit-config.yaml  COMPLETION.md  README.md  completion.bash  completion.zsh  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: code-quality.yml  security.yml  test.yml
.iflow/schemas/: branch-state.json  cache-config.json  git-flow-config.json  logging-config.json  notification-config.json  pipeline-config.json  pipeline-state.json  review-config.json  skill-config-schema.json  skill-config.json  workflow-state.json
.iflow/skills/: __init__.py  skill_cli.py  skill_manager.py
.iflow/skills/.shared-state/: changelog.md
.iflow/skills/client/: __init__.py  client.py  config.json
.iflow/skills/devops-engineer/: __init__.py  config.json  devops_engineer.py
.iflow/skills/documentation-specialist/: __init__.py  config.json  documentation_specialist.py
.iflow/skills/git-flow/: config.json  git-flow.py
.iflow/skills/git-manage/: config.json  git-manage.py
.iflow/skills/git_flow/: SKILL.md  __init__.py  config.json  git_flow.py  git_flow_branches.py  git_flow_checkpoints.py  git_flow_config.py  git_flow_merge.py  git_flow_reporting.py  git_flow_review.py  git_flow_validation.py  git_flow_workflow.py  models.py  phases.json  pipeline_manager.py
.iflow/skills/git_manage/: SKILL.md  __init__.py  config.json  git_manage.py
.iflow/skills/product-manager/: __init__.py  config.json  product_manager.py
.iflow/skills/project-manager/: __init__.py  config.json  project_manager.py
.iflow/skills/qa-engineer/: __init__.py  config.json  qa_engineer.py
.iflow/skills/security-engineer/: __init__.py  config.json  security_engineer.py
.iflow/skills/software-engineer/: __init__.py  config.json  software_engineer.py
.iflow/skills/team-pipeline-auto-review/: config.json  pipeline.json
.iflow/skills/team-pipeline-fix-bug/: config.json  pipeline.json
.iflow/skills/team-pipeline-new-feature/: config.json  pipeline.json
.iflow/skills/team-pipeline-new-project/: config.json  pipeline.json
.iflow/skills/tech-lead/: __init__.py  config.json  tech_lead.py
.iflow/skills/testing-engineer/: __init__.py  config.json  testing_engineer.py
.iflow/skills/tests/: conftest.py  run_tests.py  test_audit_logger.py  test_authentication.py  test_backup_manager.py  test_checkpoint_manager.py  test_color_output.py  test_config_validation.py  test_conflict_resolver.py  test_deadlock_detector.py  test_document_validator.py  test_error_context_collector.py  test_error_recovery_strategies.py  test_exceptions.py  test_git_command.py  test_git_flow.py  test_git_manage.py  test_input_sanitizer.py  test_metrics_collector.py  test_notification_system.py  test_pipeline_bug_fix.py  test_pipeline_integration.py  test_pipeline_new_feature.py  test_pipeline_new_project.py  test_rbac.py  test_retry_manager.py  test_secret_detection.py  test_security.py  test_skill_base.py  test_skill_manager.py  test_state_versioning.py  test_structured_logger.py  test_transactional_state.py  test_utils.py  test_workflow_engine.py
docs/: roles.md
(+95 files in other folders)
